--- a/JavaPRO/build.gradle
+++ b/JavaPRO/build.gradle
@@ -21,29 +21,29 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.2'
-	implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.2'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.2'
-	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.6.2'
-	implementation 'org.webjars:webjars-locator-core:0.48'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.webjars:webjars-locator-core'
 	implementation 'org.webjars:jquery:3.6.0'
 	implementation 'org.apache.poi:poi-ooxml:5.0.0'
-	implementation 'org.flywaydb:flyway-core:8.4.1'
-	implementation 'org.projectlombok:lombok:1.18.22'
+	implementation 'org.flywaydb:flyway-core'
+	implementation 'org.projectlombok:lombok'
 	implementation 'org.webjars:webjars-locator-core'
 	implementation 'org.webjars:sockjs-client:1.5.1'
 	implementation 'org.webjars:stomp-websocket:2.3.4'
-	implementation 'org.springframework:spring-test:5.3.14'
-	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'org.springframework:spring-test'
+	implementation 'javax.validation:validation-api'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.4'
-	runtimeOnly 'org.postgresql:postgresql:42.3.1'
-	annotationProcessor 'org.projectlombok:lombok:1.18.22'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.2'
-	testImplementation 'org.springframework.security:spring-security-test:5.5.1'
-	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-	testImplementation 'org.mockito:mockito-core:4.2.0'
+	runtimeOnly 'org.postgresql:postgresql'
+	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter-engine'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api'
+	testImplementation 'org.mockito:mockito-core'
 }
 
 test {
