--- a/JavaPRO/src/main/resources/application.properties
+++ b/JavaPRO/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/JavaPROdb
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 springdoc.swagger-ui.path=/swagger.html
+
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
