--- a/JavaPRO/src/main/resources/application.properties
+++ b/JavaPRO/src/main/resources/application.properties
@@ -9,3 +9,8 @@ springdoc.swagger-ui.path=/swagger.html
 
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=15MB
+
+security.authentication.jwt.secret=my-secret-token
+security.authentication.jwt.token-validity=2592000
+
+springdoc.paths-to-match=/**
